# Resonance-EQ

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: build.yml  pages.yml  release-package.yml
Source/: AppLogger.cpp  AppLogger.h  PerformanceProfiler.cpp  PerformanceProfiler.h  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Dsp/: EqCurve.cpp  EqCurve.h  ResonanceEngine.cpp  ResonanceEngine.h  SafetyLimiter.cpp  SafetyLimiter.h  Utilities.cpp  Utilities.h
docs/: ARCHITECTURE.md  BACKUP.md  CI-CD.md  DEPLOYMENT.md  OPERATIONS.md  UPDATE.md  _eq_curve_8cpp.html  _eq_curve_8h.html  _safety_limiter_8cpp.html  _utilities_8h_source.html  class_eq_curve-members.html  class_resonance_e_q_audio_processor_editor-members.html  class_resonance_engine-members.html  class_safety_limiter.js  dir_57142ce92d8b7001d191133f0bbf24ab.html  files.html  functions_type.html  generate_docs.md  globals_func.html  hierarchy.html  index.html  linting.md  manifest.webmanifest  namespacehreq.js  namespacehreq_1_1util.html  namespacemembers.html  namespacemembers_func.html  performance.md
docs/api/: _eq_curve_8h_source.html  _plugin_editor_8h.html  _plugin_editor_8h_source.html  _plugin_processor_8h.html  _plugin_processor_8h.js  _plugin_processor_8h_source.html  _resonance_engine_8h.html  _resonance_engine_8h.js  _resonance_engine_8h_source.html  _safety_limiter_8h.js  _utilities_8cpp.html  _utilities_8cpp.js  annotated.html  class_eq_curve.html  class_eq_curve.js  class_resonance_e_q_audio_processor-members.html  class_resonance_e_q_audio_processor.html  class_resonance_e_q_audio_processor.js  class_resonance_e_q_audio_processor_editor.js  class_resonance_engine.js  class_safety_limiter-members.html  class_safety_limiter.html  dir_57142ce92d8b7001d191133f0bbf24ab.js  dir_74389ed8173ad57b461b9d623a1f3867.html  dir_74389ed8173ad57b461b9d623a1f3867.js  doxygen_crawl.html  functions.html  globals.html  hierarchy.js  index.js  menudata.js  namespacehreq.html  namespaces_dup.js  navtreedata.js  struct_resonance_engine_1_1_params.js
docs/api/html/: _eq_curve_8h.js  _plugin_editor_8cpp.html  _plugin_editor_8h.js  _plugin_processor_8cpp.html  _resonance_engine_8cpp.html  _safety_limiter_8h.html  _safety_limiter_8h_source.html  _utilities_8h.html  _utilities_8h.js  annotated_dup.js  class_resonance_e_q_audio_processor_editor.html  class_resonance_engine.html  classes.html  functions_func.html  functions_vars.html  namespaces.html  navtreeindex0.js  struct_resonance_engine_1_1_params-members.html  struct_resonance_engine_1_1_params.html
docs/api/html/search/: all_10.js  all_11.js  all_8.js  all_9.js  all_f.js  classes_2.js  functions_0.js  functions_6.js  functions_8.js  functions_a.js  functions_d.js  searchdata.js  typedefs_0.js  variables_3.js  variables_a.js
docs/api/search/: all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_a.js  all_b.js  all_d.js  classes_1.js  classes_3.js  files_0.js  files_2.js  files_3.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_9.js  functions_c.js  namespaces_0.js  pages_1.js  pages_3.js  variables_2.js  variables_4.js  variables_5.js  variables_7.js  variables_9.js  variables_c.js  variables_d.js  variables_e.js
docs/css/: style.css
docs/search/: all_0.js  all_1.js  all_6.js  all_7.js  classes_0.js  functions_4.js  variables_1.js  variables_6.js  variables_b.js
scripts/: build-debug.bat  build-release.bat  build.bat  clean.bat  dev.bat  install-dev.bat  install-release.bat  package-release.bat  run_checks.bat  run_checks.ps1  uninstall-plugin.bat  verify-install.bat
website/: README.md  robots.txt  sitemap.xml
website/css/: normalize.css
